--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -3,30 +3,40 @@
 .header__container {
 	display: grid;
 	justify-content: space-between;
-	grid-template-columns: repeat(2, 1fr);
+	// align-items: center;
+	grid-auto-flow: column;
+	// grid-template-columns: repeat(2, 1fr);
 
 
-	@include b.respond-to('extra-large') {
-		grid-template-columns: 9.0625rem 1fr;
+	@include b.respond-to('medium') {
+		// grid-template-columns: 9.0625rem 1fr;
 		grid-template-rows: 4.875rem;
-		gap: 13.125rem;
+		gap: clamp(0.0625rem, 0.0625rem + 25vw, 13rem);
 		align-items: center;
+		justify-content: center;
 	
 	}
 }
 
-nav {
-	display: grid;
-	grid-template-columns: 25rem 1fr;
 
-	@include b.respond-to('extra-large'){
-	gap: 13.75rem;
+nav {
+	@include b.respond-to('small') {
+	display: grid;
+	// grid-template-columns: minmax(1fr, 25rem) 8.75rem;
+	//do poprawy wywaliło wszystko
+	grid-auto-flow: column;
+	gap: clamp(2rem, 2rem + 12.8vw, 13.75rem);
+	// @include b.respond-to('extra-large'){
+	// gap: 13.75rem;
+
 	}
 }
 
+
 .even-columns {
 	display: grid;
-	grid-template-columns: 1fr;
+	// grid-template-columns: 1fr;
+	grid-auto-flow: column;
 	gap: 0.3125rem;
 }
 
